# dimspector

./: .gitignore  Cargo.toml  README.md
client/: package-lock.json  package.json
client/src/: extension.ts
src/: lib.rs  main.rs  parse.rs  utils.rs
src/analysis/: dimvars.rs  errors.rs  infer.rs  mod.rs  models.rs  print.rs  types.rs
src/ast/: mod.rs  print.rs  types.rs
src/ir/: lower.rs  mod.rs  print.rs  types.rs
src/lsp/: mod.rs
src/shape_analysis/: errors.rs  mod.rs  print.rs  types.rs
test/programs/: simple.py  test.py
tests/: snapshots.rs
tests/programs/: concat.py  error_attention_dim.py  error_broadcast_batch.py  error_matmul_inner.py  error_reduction_then_matmul.py  error_residual_shape.py  error_scale_broadcast.py  ir.py  ir.py.ir.snap  ir.py.ir.snap.new  modular.py  modular_constraint.py  modular_constraint.py.ir.snap.new  simple.py  simple.py.ir.snap.new  slice.py  test.py  test.py.ir.snap.new  test2.py
tests/programs/bugs/: attention.py  attention.py.analysis.snap  attention.py.ir.snap  broadcast.py  broadcast.py.analysis.snap  broadcast.py.ir.snap  matmul_inner.py  matmul_inner.py.analysis.snap  matmul_inner.py.ir.snap  reduction_then_matmul.py  reduction_then_matmul.py.analysis.snap  reduction_then_matmul.py.ir.snap  relative_position_bias.py  relative_position_bias.py.analysis.snap  relative_position_bias.py.ir.snap  residual_shape.py  residual_shape.py.analysis.snap  residual_shape.py.ir.snap  scale_broadcast.py  scale_broadcast.py.analysis.snap  scale_broadcast.py.ir.snap
tests/programs/correct/: broadcast.py.analysis.snap  broadcast.py.ir.snap  concat.py.analysis.snap  concat.py.ir.snap  ir.py.analysis.snap  ir.py.ir.snap  modular.py  modular.py.analysis.snap  modular.py.ir.snap  reshape.py  reshape.py.analysis.snap  reshape.py.ir.snap  slice.py.analysis.snap  slice.py.ir.snap
tests/programs/integration/: mnist_functional.py  mnist_functional.py.analysis.snap  mnist_functional.py.ir.snap  mnist_functional_inference.txt  mnist_oop.py
