[package]
name = "torch-infer2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4"
miette = { version = "7.6.0", features = ["fancy"] }
petgraph = "0.8.3"
rustpython-parser = "0.4.0"
thiserror = "2.0.17"
