[package]
name = "dimspector"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
insta = "1.44.3"
itertools = "0.14.0"
log = "0.4"
miette = { version = "7.6.0", features = ["fancy"] }
num-integer = "0.1.46"
num-traits = "0.2.19"
petgraph = "0.8.3"
smallvec = "1.15.1"
textwrap = "0.16.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
] }
tower-lsp = "0.20.0"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", rev = "4c4e652b38f3e9711eb5532aabf2571309d73900", package = "ruff_python_parser" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", rev = "4c4e652b38f3e9711eb5532aabf2571309d73900", package = "ruff_python_ast" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", rev = "4c4e652b38f3e9711eb5532aabf2571309d73900", package = "ruff_text_size" }
ty_python_semantic = { git = "https://github.com/astral-sh/ruff.git", rev = "4c4e652b38f3e9711eb5532aabf2571309d73900", package = "ty_python_semantic" }
ruff_db = { git = "https://github.com/astral-sh/ruff.git", rev = "4c4e652b38f3e9711eb5532aabf2571309d73900", package = "ruff_db", features = [
    "os",
] }
ty_module_resolver = { git = "https://github.com/astral-sh/ruff.git", rev = "4c4e652b38f3e9711eb5532aabf2571309d73900", package = "ty_module_resolver" }
ty_project = { git = "https://github.com/astral-sh/ruff.git", rev = "4c4e652b38f3e9711eb5532aabf2571309d73900", package = "ty_project", features = [
    "testing",
] }

[dev-dependencies]
walkdir = "2.5"
